--- a/.github/workflows/build-and-publish-docker-images-workflow.yml
+++ b/.github/workflows/build-and-publish-docker-images-workflow.yml
@@ -10,6 +10,8 @@ jobs:
   Build-and-publish-docker-images:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
