--- a/.github/workflows/build-and-publish-docker-images-workflow.yml
+++ b/.github/workflows/build-and-publish-docker-images-workflow.yml
@@ -2,7 +2,8 @@ name: Build-and-publish-docker-images-workflow
 
 on:
   push:
-
+    branches:
+      - master
   release:
     types: [published]
 
