--- a/.github/workflows/build-and-test-workflow.yml
+++ b/.github/workflows/build-and-test-workflow.yml
@@ -23,7 +23,7 @@ jobs:
       #- run: apk add --no-cache chromium && export CHROME_BIN='/usr/bin/chromium-browser'
       - run: npm ci
       - run: npm run build -ws
-      - run: npm run test -ws
+      - run: npm run test
       - run: npm run coverage
       - name: Archive code coverage results
         uses: actions/upload-artifact@v3
