--- a/.github/workflows/build-and-test-workflow.yml
+++ b/.github/workflows/build-and-test-workflow.yml
@@ -7,7 +7,7 @@ on:
 #
 jobs:
   build:
-    runs-on: node:lts-alpine3.16
+    runs-on: ubuntu-latest
 
     # This job uses a matrix strategy to run the job four times, once for each specified Node version. For more information, see "[AUTOTITLE](/actions/using-jobs/using-a-matrix-for-your-jobs)."
     strategy:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      #- run: apk add --no-cache chromium && export CHROME_BIN='/usr/bin/chromium-browser'
+      - run: apt update && apt install chromium-browser && export CHROME_BIN='/usr/bin/chromium-browser'
       - run: npm ci
       - run: npm run build -ws
       - run: npm run test
