--- a/.github/workflows/build-and-test-workflow.yml
+++ b/.github/workflows/build-and-test-workflow.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: sudo apt update && sudo apt install chromium-browser && export CHROME_BIN='/usr/bin/chromium-browser'
-      - run: npm ci
+      - run: npm ci --unsafe-perm=true --allow-root
       - run: npm run build -ws
       - run: npm run test
       - run: npm run coverage
