--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "./projects/aas-portal"
     ],
     "devDependencies": {
+        "@babel/polyfill": "^7.4.4",
         "@semantic-release/git": "^10.0.1",
         "@semantic-release/gitlab": "^12.0.5"
     }
