--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,7 @@
                 "CONTENT_ROOT": "projects/aas-server/build",
                 "WEB_ROOT": "projects/aas-portal/dist",
                 "ASSETS": "projects/aas-server/src/assets",
+                "USER_STORAGE": "mongodb://localhost:27017/aasportal-users",
                 "ENDPOINTS": "[\"file:///samples?name=Samples\"]"
             }
         },
