--- a/.github/workflows/build-and-publish-docker-images-workflow.yml
+++ b/.github/workflows/build-and-publish-docker-images-workflow.yml
@@ -44,7 +44,7 @@ jobs:
           file: ./Dockerfile.aas-portal
           context: .
           push: true
-          tags: fraunhoferiosb/aasportal_aasportal:{{env.IMAGE_TAG}}
+          tags: fraunhoferiosb/aasportal_aasportal:${{env.IMAGE_TAG}}
 
       - name: Build and push AASServer (backend) image
         uses: docker/build-push-action@v5
@@ -52,4 +52,4 @@ jobs:
           file: ./Dockerfile.aas-server
           context: .
           push: true
-          tags: fraunhoferiosb/aasportal_aasserver:{{env.IMAGE_TAG}}
+          tags: fraunhoferiosb/aasportal_aasserver:${{env.IMAGE_TAG}}
