--- a/projects/common/tsconfig.json
+++ b/projects/common/tsconfig.json
@@ -1,25 +1,14 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
+    "extends": "../../tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
         "outDir": "./build",
-        "module": "ES2022",
-        "target": "ES2022",
-        "moduleResolution": "nodenext",
-        "strict": true,
         "noImplicitAny": true,
-        "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "sourceMap": true,
+        "moduleResolution": "nodenext",
+        "emitDecoratorMetadata": true,
         "alwaysStrict": true,
-        "resolveJsonModule": true,
-        "allowSyntheticDefaultImports": true,
         "useUnknownInCatchVariables": false,
-        "downlevelIteration": true,
-        "removeComments": true,
-        "useDefineForClassFields": false,
-        "experimentalDecorators": true,
         "lib": [
             "ES2022"
         ]
