--- a/projects/aas-lib/package.json
+++ b/projects/aas-lib/package.json
@@ -6,24 +6,11 @@
     "scripts": {
         "ng": "ng",
         "test": "ng test aas-lib",
-        "build": "node pre-build.js && ng build aas-lib && node post-build.js",
-        "build:debug": "node pre-build.js && ng build aas-lib --configuration development && node post-build.js",
+        "build": "ng build aas-lib",
+        "build:debug": "ng build aas-lib --configuration development",
         "tsc": "rimraf build && tsc -p tsconfig.json",
         "lint": "ng lint aas-lib",
         "format": "ng lint aas-lib --fix"
-    },
-    "module": "dist/fesm2022/aas-lib.mjs",
-    "typings": "dist/index.d.ts",
-    "exports": {
-        "./package.json": {
-            "default": "./package.json"
-        },
-        ".": {
-            "types": "./dist/index.d.ts",
-            "esm2022": "./dist/esm2022/aas-lib.mjs",
-            "esm": "./dist/esm2022/aas-lib.mjs",
-            "default": "./dist/fesm2022/aas-lib.mjs"
-        }
     },
     "peerDependencies": {
         "@angular/animations": "^16.1.8",
