--- a/projects/aas-portal/tsconfig.json
+++ b/projects/aas-portal/tsconfig.json
@@ -1,35 +1,26 @@
 {
+    "extends": "../../tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
-      "baseUrl": "./",
-      "outDir": "./dist/out-tsc",
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "noImplicitOverride": true,
-      "noPropertyAccessFromIndexSignature": true,
-      "noImplicitReturns": true,
-      "noFallthroughCasesInSwitch": true,
-      "sourceMap": true,
-      "declaration": false,
-      "downlevelIteration": true,
-      "experimentalDecorators": true,
-      "moduleResolution": "node",
-      "importHelpers": true,
-      "target": "ES2022",
-      "module": "ES2022",
-      "allowSyntheticDefaultImports": true,
-      "resolveJsonModule": true,
-      "useDefineForClassFields": false,
-      "lib": [
-        "ES2022",
-        "dom"
-      ]
+        "outDir": "./dist/out-tsc",
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "declaration": false,
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "lib": [
+            "ES2022",
+            "dom"
+        ],
+        "types": [
+            "@angular/localize",
+            "jasmine"
+        ]
     },
     "angularCompilerOptions": {
-      "enableI18nLegacyMessageIdFormat": false,
-      "strictInjectionParameters": true,
-      "strictInputAccessModifiers": true,
-      "strictTemplates": true
+        "enableI18nLegacyMessageIdFormat": false,
+        "strictInjectionParameters": true,
+        "strictInputAccessModifiers": true,
+        "strictTemplates": true
     }
-  }
-  
+}
