--- a/projects/aas-server/tsconfig.json
+++ b/projects/aas-server/tsconfig.json
@@ -1,36 +1,19 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
+    "extends": "../../tsconfig.json",
     "compileOnSave": false,
     "compilerOptions": {
         "outDir": "./build",
-        "module": "NodeNext",
-        "target": "ES2022",
-        "moduleResolution": "NodeNext",
-        "strict": true,
         "noImplicitAny": true,
-        "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "sourceMap": true,
-        "alwaysStrict": true,
-        "resolveJsonModule": true,
-        "allowSyntheticDefaultImports": true,
-        "useUnknownInCatchVariables": false,
-        "downlevelIteration": true,
-        "removeComments": true,
-        "useDefineForClassFields": false,
-        "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "alwaysStrict": true,
+        "useUnknownInCatchVariables": false,
+        "moduleResolution": "nodenext",
         "lib": [
             "es2022"
         ],
         "types": [
             "node"
-        ],
-        "paths": {
-            "*": [
-                "./src/app/types/*"
-            ]
-        }
+        ]
     }
 }
