loading swagger doc via import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
+        "moduleResolution": "NodeNext",
         "paths": {
             "io-planning-ui": [
                 "projects/aas-lib/src/public-api"
