--- a/projects/common/tsconfig.json
+++ b/projects/common/tsconfig.json
@@ -5,7 +5,8 @@
         "outDir": "./build",
         "noImplicitAny": true,
         "skipLibCheck": true,
-        "moduleResolution": "nodenext",
+        "module": "ES2022",
+        "moduleResolution": "NodeNext",
         "emitDecoratorMetadata": true,
         "alwaysStrict": true,
         "useUnknownInCatchVariables": false,
