--- a/projects/aas-lib/tsconfig.json
+++ b/projects/aas-lib/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "declaration": false,
+        "module": "ES2022",
         "moduleResolution": "node",
         "importHelpers": true,
         "lib": [
