--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aas-portal-project",
-    "version": "3.0.3",
+    "version": "3.0.4",
     "description": "Web-based visualization and control of asset administration shells.",
     "type": "module",
     "scripts": {
@@ -35,6 +35,7 @@
         "./projects/aas-portal"
     ],
     "devDependencies": {
+        "@babel/plugin-syntax-import-attributes": "^7.22.5",
         "@semantic-release/git": "^10.0.1",
         "@semantic-release/gitlab": "^12.0.5"
     }
