--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://gitlab.cc-asp.fraunhofer.de/iosb-ina-big-data-plattformen/aasportal.git"
+        "url": "https://github.com/FraunhoferIOSB/AASPortal.git"
     },
     "author": "Fraunhofer IOSB-INA",
     "homepage": "https://www.iosb-ina.fraunhofer.de/",
