perf: adding branches to versioning workflow

--- a/.github/workflows/versioning-workflow.yml
+++ b/.github/workflows/versioning-workflow.yml
@@ -2,7 +2,9 @@ name: Versioning-workflow
 on:
   push:
     branches:
-      - pipeline-dev
+      - master
+      - staging
+      - development
     
 
 permissions:
