--- a/package.json
+++ b/package.json
@@ -34,9 +34,102 @@
         "./projects/aas-lib",
         "./projects/aas-portal"
     ],
+    "dependencies": {
+        "@angular/animations": "^16.1.8",
+        "@angular/common": "^16.1.8",
+        "@angular/compiler": "^16.1.8",
+        "@angular/core": "^16.1.8",
+        "@angular/forms": "^16.1.8",
+        "@angular/localize": "^16.1.8",
+        "@angular/platform-browser": "^16.1.8",
+        "@angular/platform-browser-dynamic": "^16.1.8",
+        "@angular/router": "^16.1.8",
+        "@babel/polyfill": "^7.4.4",
+        "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+        "@ngrx/effects": "^16.1.0",
+        "@ngrx/store": "^16.1.0",
+        "@ngx-translate/core": "^15.0.0",
+        "@ngx-translate/http-loader": "^8.0.0",
+        "@popperjs/core": "^2.11.8",
+        "@xmldom/xmldom": "^0.8.10",
+        "bcryptjs": "^2.4.3",
+        "bootstrap": "^5.3.1",
+        "bootstrap-icons": "^1.10.5",
+        "chart.js": "^4.3.3",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "form-data": "^4.0.0",
+        "jimp": "^0.22.10",
+        "jsonwebtoken": "^9.0.1",
+        "jszip": "^3.10.1",
+        "jwt-decode": "^3.1.2",
+        "lodash-es": "^4.17.21",
+        "mongoose": "^7.4.2",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.4",
+        "node-opcua": "^2.108.0",
+        "node-opcua-client-crawler": "^2.108.0",
+        "owncloud-sdk": "^3.1.0-alpha.7",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "~7.8.1",
+        "swagger-ui-express": "^5.0.0",
+        "tslib": "^2.6.1",
+        "tsoa": "^5.1.1",
+        "tsyringe": "^4.8.0",
+        "uuid": "^8.3.2",
+        "winston": "^3.10.0",
+        "winston-daily-rotate-file": "^4.7.1",
+        "ws": "^8.13.0",
+        "xpath": "^0.0.33",
+        "zone.js": "~0.13.1"
+    },
     "devDependencies": {
+        "@angular/cli": "^16.1.8",
+        "@angular/compiler-cli": "^16.1.8",
+        "@angular-devkit/build-angular": "^16.1.8",
+        "@angular-eslint/builder": "16.1.0",
+        "@angular-eslint/eslint-plugin": "16.1.0",
+        "@angular-eslint/eslint-plugin-template": "16.1.0",
+        "@angular-eslint/schematics": "16.1.0",
+        "@angular-eslint/template-parser": "16.1.0",
         "@babel/plugin-syntax-import-attributes": "^7.22.5",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/gitlab": "^12.0.5"
+        "@jest/globals": "^29.6.2",
+        "@ngrx/eslint-plugin": "^16.1.0",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/bootstrap": "^5.2.6",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/jasmine": "^4.3.5",
+        "@types/jquery": "^3.5.16",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/lodash-es": "^4.17.8",
+        "@types/morgan": "^1.9.4",
+        "@types/multer": "^1.4.7",
+        "@types/node": "^18.16.0",
+        "@types/nodemailer": "^6.4.9",
+        "@types/supertest": "^2.0.12",
+        "@types/swagger-ui-express": "^4.1.3",
+        "@types/uuid": "^8.3.4",
+        "@types/ws": "^8.5.5",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
+        "babel-plugin-transform-import-meta": "^2.2.1",
+        "esbuild": "^0.18.19",
+        "eslint": "^8.46.0",
+        "jasmine-core": "^5.1.0",
+        "jest": "^29.6.2",
+        "karma": "^6.4.2",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-coverage": "^2.2.1",
+        "karma-jasmine": "^5.1.0",
+        "karma-jasmine-html-reporter": "^2.1.0",
+        "karma-junit-reporter": "^2.0.1",
+        "ng-packagr": "^16.1.0",
+        "rimraf": "^5.0.1",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "5.0.*"
     }
 }
