--- a/Dockerfile.aas-portal
+++ b/Dockerfile.aas-portal
@@ -2,7 +2,7 @@
 FROM node:lts-alpine3.16 as build
 WORKDIR /usr/src/app
 COPY . .
-RUN npm ci -w=aas-portal
+RUN npm install
 RUN npm run aas-portal:build
 
 FROM nginx:latest as aas-portal
