--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
         "./projects/aas-portal"
     ],
     "devDependencies": {
-        "@babel/plugin-syntax-import-attributes": "^7.22.5",
-        "@semantic-release/git": "^10.0.1",
-        "@semantic-release/gitlab": "^12.0.5"
+        "@babel/plugin-syntax-import-attributes": "^7.22.5"
+    },
+    "dependencies": {
+        "lowdb": "^6.1.1"
     }
 }
