--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
         "mongoose": "^7.6.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.6",
         "node-opcua": "^2.115.0",
         "node-opcua-client-crawler": "^2.115.0",
+        "nodemailer": "^6.9.6",
         "owncloud-sdk": "^3.1.0-alpha.9",
         "reflect-metadata": "^0.1.13",
         "rxjs": "~7.8.1",
@@ -85,14 +85,14 @@
         "zone.js": "~0.13.1"
     },
     "devDependencies": {
-        "@angular/cli": "^16.2.6",
-        "@angular/compiler-cli": "^16.2.9",
         "@angular-devkit/build-angular": "^16.2.6",
         "@angular-eslint/builder": "16.2.0",
         "@angular-eslint/eslint-plugin": "16.2.0",
         "@angular-eslint/eslint-plugin-template": "16.2.0",
         "@angular-eslint/schematics": "16.2.0",
         "@angular-eslint/template-parser": "16.2.0",
+        "@angular/cli": "^16.2.6",
+        "@angular/compiler-cli": "^16.2.9",
         "@babel/plugin-syntax-import-attributes": "^7.22.5",
         "@jest/globals": "^29.7.0",
         "@ngrx/eslint-plugin": "^16.3.0",
@@ -127,6 +127,7 @@
         "karma-junit-reporter": "^2.0.1",
         "ng-packagr": "^16.2.3",
         "rimraf": "^5.0.5",
+        "semantic-release": "^22.0.7",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
