--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "@babel/plugin-syntax-import-attributes": "^7.22.5",
         "@jest/globals": "^29.7.0",
         "@ngrx/eslint-plugin": "^16.3.0",
+        "@semantic-release/git": "^10.0.1",
         "@types/bcryptjs": "^2.4.4",
         "@types/bootstrap": "^5.2.7",
         "@types/cors": "^2.8.14",
