--- a/.github/workflows/versioning-workflow.yml
+++ b/.github/workflows/versioning-workflow.yml
@@ -34,5 +34,5 @@ jobs:
         run: npm audit signatures
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
