--- a/.github/workflows/versioning-workflow.yml
+++ b/.github/workflows/versioning-workflow.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
