--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "@jest/globals": "^29.7.0",
         "@ngrx/eslint-plugin": "^16.3.0",
         "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^9.2.3",
         "@types/bcryptjs": "^2.4.4",
         "@types/bootstrap": "^5.2.7",
         "@types/cors": "^2.8.14",
