--- a/.github/workflows/versioning-workflow.yml
+++ b/.github/workflows/versioning-workflow.yml
@@ -14,13 +14,18 @@ jobs:
   release:
     name: Versioning
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           persist-credentials: false
+          token: ${{ secrets.TOKEN }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -31,6 +36,6 @@ jobs:
         run: npm audit signatures
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
