--- a/.github/workflows/versioning-workflow.yml
+++ b/.github/workflows/versioning-workflow.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -29,6 +30,5 @@ jobs:
         run: npm audit signatures
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           GH_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
