start, aas-table update

--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,13 @@
                             "vendorChunk": true,
                             "extractLicenses": false,
                             "sourceMap": true,
-                            "namedChunks": true
+                            "namedChunks": true,
+                            "fileReplacements": [
+                              {
+                                "replace": "projects/aas-portal/src/environments/environment.ts",
+                                "with": "projects/aas-portal/src/environments/environment.development.ts"
+                              }
+                            ]
                         }
                     },
                     "defaultConfiguration": "production"
