--- a/projects/aas-portal/tsconfig.json
+++ b/projects/aas-portal/tsconfig.json
@@ -15,7 +15,8 @@
         ],
         "types": [
             "@angular/localize",
-            "jasmine"
+            "jasmine",
+            "node"
         ]
     },
     "angularCompilerOptions": {
