--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@ngrx/component-store": "^16.3.0",
     "lowdb": "^6.1.1",
+    "mysql2": "^3.6.5",
     "uninstall": "^0.0.0"
   }
 }
