--- a/projects/common/tsconfig.json
+++ b/projects/common/tsconfig.json
@@ -5,7 +5,7 @@
         "outDir": "./build",
         "noImplicitAny": true,
         "skipLibCheck": true,
-        "module": "ES2022",
+        "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "emitDecoratorMetadata": true,
         "alwaysStrict": true,
