fix: update to angular v17

--- a/angular.json
+++ b/angular.json
@@ -16,11 +16,11 @@
             "prefix": "fhg",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-devkit/build-angular:application",
                     "options": {
                         "outputPath": "projects/aas-portal/dist",
                         "index": "projects/aas-portal/src/index.html",
-                        "main": "projects/aas-portal/src/main.ts",
+                        "browser": "projects/aas-portal/src/main.ts",
                         "polyfills": [
                             "zone.js"
                         ],
@@ -31,11 +31,11 @@
                             "projects/aas-portal/src/assets"
                         ],
                         "styles": [
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
                             "projects/aas-portal/src/styles.scss"
                         ],
-                        "scripts": [
-                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
-                        ],
+                        "scripts": [],
                         "allowedCommonJsDependencies": [
                             "lodash-es"
                         ]
@@ -59,15 +59,14 @@
                         "development": {
                             "buildOptimizer": false,
                             "optimization": false,
-                            "vendorChunk": true,
                             "extractLicenses": false,
                             "sourceMap": true,
                             "namedChunks": true,
                             "fileReplacements": [
-                              {
-                                "replace": "projects/aas-portal/src/environments/environment.ts",
-                                "with": "projects/aas-portal/src/environments/environment.development.ts"
-                              }
+                                {
+                                    "replace": "projects/aas-portal/src/environments/environment.ts",
+                                    "with": "projects/aas-portal/src/environments/environment.development.ts"
+                                }
                             ]
                         }
                     },
@@ -77,11 +76,11 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "aas-portal:build:production",
+                            "buildTarget": "aas-portal:build:production",
                             "proxyConfig": "projects/aas-portal/proxy.conf.json"
                         },
                         "development": {
-                            "browserTarget": "aas-portal:build:development",
+                            "buildTarget": "aas-portal:build:development",
                             "proxyConfig": "projects/aas-portal/proxy.conf.json"
                         }
                     },
@@ -90,7 +89,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "aas-portal:build"
+                        "buildTarget": "aas-portal:build"
                     }
                 },
                 "test": {
