--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "nicht",
         "NMTOKEN",
         "NMTOKENS",
+        "owncloud",
         "preprocessors",
         "Qualifiable",
         "rechtlich",
