--- a/projects/aas-portal/package.json
+++ b/projects/aas-portal/package.json
@@ -16,30 +16,31 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^16.2.9",
-        "@angular/common": "^16.2.9",
-        "@angular/compiler": "^16.2.9",
-        "@angular/core": "^16.2.9",
-        "@angular/forms": "^16.2.9",
-        "@angular/localize": "^16.2.9",
-        "@angular/platform-browser": "^16.2.9",
-        "@angular/platform-browser-dynamic": "^16.2.9",
-        "@angular/router": "^16.2.9",
-        "@ng-bootstrap/ng-bootstrap": "^15.1.1",
-        "@ngrx/effects": "^16.3.0",
-        "@ngrx/store": "^16.3.0",
+        "@angular/animations": "^17.0.8",
+        "@angular/common": "^17.0.8",
+        "@angular/compiler": "^17.0.8",
+        "@angular/core": "^17.0.8",
+        "@angular/forms": "^17.0.8",
+        "@angular/localize": "^17.0.8",
+        "@angular/platform-browser": "^17.0.8",
+        "@angular/platform-browser-dynamic": "^17.0.8",
+        "@angular/router": "^17.0.8",
+        "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+        "@ngrx/component-store": "^17.0.1",
+        "@ngrx/effects": "^17.0.1",
+        "@ngrx/store": "^17.0.1",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
         "@popperjs/core": "^2.11.8",
         "@xmldom/xmldom": "^0.8.10",
         "bootstrap": "^5.3.2",
-        "bootstrap-icons": "^1.11.1",
-        "chart.js": "^4.4.0",
-        "jwt-decode": "^3.1.2",
+        "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.1",
+        "jwt-decode": "^4.0.0",
         "lodash-es": "^4.17.21",
         "rxjs": "~7.8.1",
-        "tslib": "^2.6.1",
+        "tslib": "^2.6.2",
         "uuid": "^8.3.2",
-        "zone.js": "~0.13.1"
+        "zone.js": "~0.14.2"
     }
 }
