--- a/projects/aas-server/package.json
+++ b/projects/aas-server/package.json
@@ -23,6 +23,7 @@
         "@babel/polyfill": "^7.4.4",
         "@xmldom/xmldom": "^0.8.10",
         "bcryptjs": "^2.4.3",
+        "chalk": "^2.4.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
@@ -30,24 +31,24 @@
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "lodash-es": "^4.17.21",
-        "lowdb": "^6.1.1",
-        "mongoose": "^7.6.2",
+        "lowdb": "^7.0.1",
+        "mongoose": "^8.0.3",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.6.5",
-        "node-opcua": "^2.115.0",
-        "node-opcua-client-crawler": "^2.115.0",
-        "nodemailer": "^6.9.6",
-        "owncloud-sdk": "^3.1.0-alpha.9",
-        "reflect-metadata": "^0.1.13",
+        "mysql2": "^3.7.0",
+        "node-opcua": "^2.119.2",
+        "node-opcua-client-crawler": "^2.119.2",
+        "nodemailer": "^6.9.8",
+        "owncloud-sdk": "^3.1.0-alpha.10",
+        "reflect-metadata": "^0.2.1",
         "swagger-ui-express": "^5.0.0",
         "tslib": "^2.6.2",
-        "tsoa": "^5.1.1",
+        "tsoa": "^6.0.0",
         "tsyringe": "^4.8.0",
         "uuid": "^8.3.2",
         "winston": "^3.11.0",
         "winston-daily-rotate-file": "^4.7.1",
-        "ws": "^8.14.2",
-        "xpath": "^0.0.33"
+        "ws": "^8.16.0",
+        "xpath": "^0.0.34"
     }
 }
