fix: rename TEMPLATE_STORAGE to FILE_STORAGE

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,9 @@
                 "CONTENT_ROOT": "projects/aas-server/build",
                 "WEB_ROOT": "projects/aas-portal/dist",
                 "ASSETS": "projects/aas-server/src/assets",
+                "USER_STORAGE": "mongodb://localhost:27017/aasportal-users",
+                "FILE_STORAGE": "http://aasportal:aas-server@localhost:1234",
+                "AAS_INDEX": "mysql://aasportal:aas-server@localhost:3306",
                 "ENDPOINTS": "[\"file:///samples?name=Samples\"]",
             }
         },
