fix: add chalk v2.4.1 to aas-server/package.json

--- a/projects/aas-server/package.json
+++ b/projects/aas-server/package.json
@@ -22,6 +22,7 @@
         "@babel/polyfill": "^7.4.4",
         "@xmldom/xmldom": "^0.8.10",
         "bcryptjs": "^2.4.3",
+        "chalk": "^2.4.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
@@ -32,9 +33,9 @@
         "mongoose": "^7.6.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.6",
         "node-opcua": "^2.115.0",
         "node-opcua-client-crawler": "^2.115.0",
+        "nodemailer": "^6.9.6",
         "owncloud-sdk": "^3.1.0-alpha.9",
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^5.0.0",
