--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
         "node-opcua": "^2.119.2",
         "node-opcua-client-crawler": "^2.119.2",
         "nodemailer": "^6.9.8",
-        "owncloud-sdk": "^3.1.0-alpha.10",
         "reflect-metadata": "^0.2.1",
         "rxjs": "~7.8.1",
         "swagger-ui-express": "^5.0.0",
@@ -82,6 +81,7 @@
         "tsoa": "^6.0.0",
         "tsyringe": "^4.8.0",
         "uuid": "^8.3.2",
+        "webdav": "^4.10.0",
         "winston": "^3.11.0",
         "winston-daily-rotate-file": "^4.7.1",
         "ws": "^8.16.0",
