fix: refactoring aas-portal AASComponent

--- a/projects/aas-portal/tsconfig.json
+++ b/projects/aas-portal/tsconfig.json
@@ -17,7 +17,12 @@
             "@angular/localize",
             "jasmine",
             "node"
-        ]
+        ],
+        "paths": {
+            "aas-lib": [
+                "projects/aas-lib/src/public-api"
+            ]
+        }
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
