--- a/projects/aasportal-index/package.json
+++ b/projects/aasportal-index/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "aas-index",
+  "name": "aasportal-index",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "docker-compose rm -v -f db && docker-compose up"
   },
-  "author": "",
+  "author": "Fraunhofer IOSB-INA",
   "license": "ISC"
 }
