--- a/projects/aasportal-cloud/package.json
+++ b/projects/aasportal-cloud/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "docker-compose rm -v -f owncloud -f mariadb -f redis && docker-compose up"
+    "build": "docker-compose rm -v -f owncloud && docker-compose up"
   },
-  "author": "",
+  "author": "Fraunhofer IOSB-INA",
   "license": "ISC"
 }
