--- a/projects/aasportal-index/package.json
+++ b/projects/aasportal-index/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "docker-compose rm -v -f db && docker-compose up"
+    "build": "docker-compose -f docker-compose.yml up"
   },
   "author": "Fraunhofer IOSB-INA",
   "license": "ISC"
