--- a/projects/aasportal-users/docker-compose.yml
+++ b/projects/aasportal-users/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     ports:
       - 27017:27017
+    volumes:
+      - /data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
