--- a/projects/aasportal-cloud/.env
+++ b/projects/aasportal-cloud/.env
@@ -1,6 +1,6 @@
-OWNCLOUD_VERSION=latest
-OWNCLOUD_DOMAIN=localhost:8080
-OWNCLOUD_TRUSTED_DOMAINS=localhost
-ADMIN_USERNAME=aas-server
-ADMIN_PASSWORD=aas-server
 HTTP_PORT=8080
+MYSQL_ROOT_PASSWORD=djtg&Usx9Cx$fD5v
+MYSQL_PASSWORD=aas-server
+NEXTCLOUD_ADMIN_USER=aas-server
+NEXTCLOUD_ADMIN_PASSWORD=aas-server
+NEXTCLOUD_TRUSTED_DOMAINS=localhost
