fix: general bug fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,9 +29,9 @@
                 "WEB_ROOT": "projects/aas-portal/dist",
                 "ASSETS": "projects/aas-server/src/assets",
                 "USER_STORAGE": "mongodb://localhost:27017/aasportal-users",
-                // "TEMPLATE_STORAGE": "http://localhost:8080/templates",
-                // "AAS_INDEX": "mysql://localhost:3306",
-                "ENDPOINTS": "[\"file:///endpoints/samples?name=Samples\",\"http://localhost:5001?name=AASX%20Server\"]",
+                "TEMPLATE_STORAGE": "http://localhost:8080/templates",
+                "AAS_INDEX": "mysql://localhost:3306",
+                "ENDPOINTS": "[\"file:///endpoints/samples?name=Samples\",\"http://localhost:5001?name=AASX%20Server\",\"http://localhost:8080/endpoints/idta?name=Cloud\"]",
             }
         },
         {
