--- a/Dockerfile.aas-server
+++ b/Dockerfile.aas-server
@@ -2,12 +2,12 @@
 FROM node:lts-alpine3.19 as build
 WORKDIR /usr/src/app
 COPY . .
-RUN apk add g++ make py3-pip
+# RUN apk add g++ make py3-pip
 RUN npm install
 RUN node create-app-info.js
 RUN npm run aas-server:build
 
-FROM node:lts-alpine3.19 as aas-server-app
+FROM node:lts-alpine3.19 as aas-server
 RUN apk upgrade --update-cache --available && apk add openssl && rm -rf /var/cache/apk/*
 WORKDIR /usr/src/app
 COPY package.json package.json
@@ -21,7 +21,7 @@ COPY projects/aas-server/src/assets assets/
 ENV NODE_LOG=./log/debug.log
 ENV NODE_SERVER_PORT=1337
 ENV USER_STORAGE=mongodb://172.16.160.178:27017/aasportal-users
-ENV ENDPOINTS=["\"file:///samples?name=Samples\""]
+ENV ENDPOINTS=["\"file:///endpoints/samples?name=Samples\""]
 ENV NODE_ENV=production
 
 EXPOSE 1337
