--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
         "semantic-release": "^23.0.2",
         "supertest": "^6.3.4",
         "ts-jest": "^29.1.2",
-        "ts-node": "^10.9.2",
+        "tsx": "^4.7.1",
         "typescript": "^5.2.2"
     }
 }
