--- a/projects/aas-portal/nginx.conf
+++ b/projects/aas-portal/nginx.conf
@@ -24,7 +24,7 @@ http {
         }
 
         location /api/ {
-                proxy_pass http://172.25.0.11:1337;
+                proxy_pass http://aas-server:1337;
                 proxy_http_version 1.1;
         }
 
@@ -34,7 +34,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_cache_bypass $http_upgrade
             proxy_set_header Host $host;
-            proxy_pass http://172.25.0.11:1337;
+            proxy_pass http://aas-server:1337;
         }
         
         error_page   500 502 503 504  /50x.html;
