--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,22 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=aas-server
       - MONGO_INITDB_DATABASE=aasportal-users
 
+  mysql:
+    image: mariadb:latest
+    container_name: aasportal-index
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - ./projects/aasportal-index/schema.sql:/docker-entrypoint-initdb.d/1.sql
+      - sqldata:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: db>D6~M$4§Y:sChh
+      MYSQL_DATABASE: aas-index
+      MYSQL_USER: aas-server
+      MYSQL_PASSWORD: aas-server
+    ports:
+      - 3306:3306
+
   aas-server:
     container_name: aas-server
     build:
@@ -30,6 +46,7 @@ services:
       dockerfile: ./Dockerfile.aas-portal
     restart: always
     ports:
-      - "80:80"
+      - 80:80
 volumes:
   mongodata:
+  sqldata:
