--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
         "semantic-release": "^23.0.8",
         "supertest": "^6.3.4",
         "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
         "tsx": "^4.7.2",
         "typescript": "^5.2.2"
     }
