--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,4 +45,14 @@
         {"name": "common", "rootPath": "./projects/common", "runMode": "on-demand", "jestCommandLine": "node --experimental-vm-modules --no-warnings ../../node_modules/jest/bin/jest.js"},
         {"name": "aas-server", "rootPath": "./projects/aas-server", "runMode": "on-demand", "jestCommandLine": "node --experimental-vm-modules --no-warnings ../../node_modules/jest/bin/jest.js"}
     ],
+    "jasmineExplorer.config": "./jasmine.json",
+    "jasmineExplorer.debuggerConfig": "",
+    "jasmineExplorer.nodeArgv": [
+        "--experimental-vm-modules", 
+        "--no-warnings",
+        "-r",
+        "ts-node/register",
+    ],
+    "jasmineExplorer.nodePath": null,
+    "jasmineExplorer.jasminePath": null,
 }
